--- a/atom/.atom/styles.less
+++ b/atom/.atom/styles.less
@@ -22,13 +22,17 @@
 
 // style the background and foreground colors on the atom-text-editor-element itself
 atom-text-editor {
-    font-size: 10px;
-    // font-weight: 600;
-    // -webkit-font-smoothing: subpixel-antialiased;
-    text-rendering: optimizeSpeed;
+    font-size: 14px;
+    // font-family: "ProggySquareTT";
+    font-family: "ProggyCleanTT";
+    // font-weight: 300;
+    -webkit-font-smoothing: subpixel-antialiased;
+    // -webkit-font-smoothing: none;
+    text-rendering: optimizeLegibility;;
     // text-shadow: 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.5);
-    // letter-spacing: 0.5px
+    // letter-spacing: 0.2px;
     // color: #acacac;
+    line-height: 14px;
   // background-color: hsl(180, 24%, 12%);
 }
 
@@ -38,6 +42,6 @@ atom-text-editor::shadow .cursor {
 }
 
 linter-message-line {
-    font-size: 10px;
+    font-size: 14px;
     text-shadow: none;
 }
